Update layout for adding racquet

--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -31,5 +31,8 @@
         <activity
             android:name=".RacquetListActivity"
             android:theme="@style/Theme.Tennis_tune.NoActionBar" />
+        <activity
+            android:name=".AddEditRacquetActivity"
+            android:theme="@style/Theme.Tennis_tune.NoActionBar" />
     </application>
 </manifest>
