--- a/.gitignore
+++ b/.gitignore
@@ -32,18 +32,5 @@ google-services.json
 # Android Profiling
 *.hprof
 
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+# MacOS
 .DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
-local.properties
